# lidar_cam_calib

./: .gitignore  README.md
calibration/: CMakeLists.txt  calib.rviz  package.xml
calibration/launch/: calibrate.launch
calibration/rviz/: calib.rviz
calibration/src/: calibrate.cpp  calibrate.hpp
edge_detector/: CMakeLists.txt  package.xml
edge_detector/src/: edge_detector_node.cpp
find_corner/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  package.xml  qnode.cpp  qnode.h
find_corner/msg/: CustomPoint.msg
intrinsic_calib/: CMakeLists.txt  package.xml
intrinsic_calib/launch/: calibrate.launch
intrinsic_calib/results/: fr.yaml
intrinsic_calib/src/: calib_fisheye.cpp  calib_pinhole.cpp  camera_calibration.cpp  camera_calibration.h  check_intrinsic.cpp
marker_dector/: CMakeLists.txt  log  package.xml
marker_dector/config/: default.yaml  fr.yaml  gray.yaml  hkust4.yaml  large.yaml  left.yaml
marker_dector/fig/: init_c.json  normal  normal.json
marker_dector/launch/: aruco.launch  checker.launch  detector.launch  marker.launch
marker_dector/src/: aruco_detector.cpp  camera_calibration.cpp  camera_calibration.h  checker.cpp  checkerboard.cpp  marker_detector_node.cpp
opencv_exercise/: CMakeLists.txt  bag_pic_corner.txt  package.xml
opencv_exercise/src/: calc_pnp.cpp  cam_lid_external.cpp  cam_lid_external2.cpp  find_corner.cpp  grab.cpp  grab_trigger.cpp
plane_detector/: .gitignore  CMakeLists.txt  package.xml
plane_detector/config/: 1.yaml  10.yaml  107.yaml  11.yaml  13.yaml  14.yaml  15.yaml  16.yaml  2.yaml  20.yaml  21.yaml  3.yaml  4.yaml  5.yaml  8.yaml
plane_detector/config/hkust/: s2.yaml
plane_detector/config/hkust/large/: left.yaml
plane_detector/config/hkust1/small/: right.yaml
plane_detector/config/hkust2/: 14.yaml  8.yaml
plane_detector/config/hkust4/: 0.yaml  14.yaml  22.yaml  23.yaml  38.yaml  4.yaml
plane_detector/config/huawei/: 0.yaml
plane_detector/data/calib/: 0.json  1.json  10.json  100.json  101.json  105.json  107.json  109.json  11.json  113.json  115.json  118.json  12.json  124.json  126.json  13.json  14.json  15.json  16.json  17.json  2.json  3.json  4.json  5.json  6.json  7.json  9.json
plane_detector/data/calib/hkust1/large/: left.json  middle.json  right.json
plane_detector/data/calib/hkust1/small/: left.json  middle_.json
plane_detector/data/calib/hkust2/: 10.json  14.json  16.json  17.json  18.json  19.json  20.json  21.json  22.json  3.json  4.json  5.json  7.json  8.json
plane_detector/data/calib/hkust3/: 102.json  103.json  104.json  106.json  108.json  110.json  111.json  112.json  114.json  116.json  117.json  119.json  120.json  121.json  122.json  123.json  125.json  127.json  128.json
plane_detector/data/calib/hkust4/: 0.json  1.json  10.json  11.json  12.json  14.json  19.json  2.json  21.json  23.json  27.json  3.json  36.json  4.json  41.json  5.json  6.json  7.json  8.json  9.json
plane_detector/data/demo/: plane_lasi.json
plane_detector/data/edge/: 100.json  7.json
plane_detector/data/filter/: 0.json  1.json  10.json  102.json  104.json  107.json  108.json  109.json  11.json  112.json  114.json  117.json  119.json  12.json  124.json  126.json  127.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json  init_l.json
plane_detector/data/filter/hkust2/: 10.json  12.json  13.json  14.json  18.json  20.json  21.json  22.json  3.json  4.json  5.json  9.json
plane_detector/data/filter/hkust3/: 100.json  101.json  103.json  105.json  106.json  110.json  111.json  113.json  115.json  116.json  118.json  120.json  121.json  122.json  123.json  125.json  128.json
plane_detector/data/filter/hkust4/: 0.json  1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  5.json  6.json  7.json  (+2 more)
plane_detector/data/filter/huawei/: 0.json  1.json  2.json
plane_detector/data/hkust/: s3.json
plane_detector/data/hkust/large/: left_.json
plane_detector/data/hkust/small/: left_.json  right_.json
plane_detector/data/lg02/: 1.json
plane_detector/data/wall/: left.json  middle.json
plane_detector/launch/: checker.launch  demo.launch  detector.launch  extractor.launch
plane_detector/mid40/demo/: plane.json
plane_detector/mid40/hkust/: s2.json
plane_detector/mid40/wall/: right.json
plane_detector/rviz/: rosrun.rviz
plane_detector/src/: plane_detector.cpp  plane_detector_node.cpp  plane_extractor.cpp
